--- a/template.html
+++ b/template.html
@@ -16,10 +16,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="AboutUs.html">About Us</a></li>
-						<li><a href="elements.html">Contact</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
-                </nav>
+						<li><a href="#">Tasks</a></li>
+						<li><a href="#">Nurses</a></li>
+				</nav>
 		<!-- Banner -->
 			
 				<section id="banner">
