--- a/adminUI.html
+++ b/adminUI.html
@@ -6,38 +6,32 @@
 		<link rel="stylesheet" href="css/style1.css"/>
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/jquery-2.1.3.js"></script>
-		<script>
-		$(document).ready(function(){
-			$('#lognurse').click(function(){
-				$('#overlay').fadeIn('slow');
-				$('#overlay_div').fadeIn('slow');
-				$('#nursebutton').click(function(){
-					window.location.href='nurseUI.html'
-				});
-			});
-		});
-		$(document).ready(function(){
-			$('#logadmin').click(function(){
-				$('#overlay1').fadeIn('slow');
-				$('#overlay_div1').fadeIn('slow');
-				$('#adminbutton').click(function(){
-					window.location.href='adminUI.html';
-				});
-			});
-		});
-		$(document).ready(function(){
-			$('.close-button').click(function(){
-				$('#overlay').fadeOut('fast');
-				$('#overlay_div').fadeOut('fast');
-			});
-		});
-		$(document).ready(function(){
-			$('.close-button').click(function(){
-				$('#overlay1').fadeOut('fast');
-				$('#overlay_div1').fadeOut('fast');
-			});
-		});
-		</script>
+		   <script>
+		// $(document).ready(function(){
+		// 	$('#lognurse').click(function(){
+		// 		$('#overlay').fadeIn('slow');
+		// 		$('#overlay_div').fadeIn('slow');
+		// 	});
+		// });
+		// $(document).ready(function(){
+		// 	$('#logadmin').click(function(){
+		// 		$('#overlay1').fadeIn('slow');
+		// 		$('#overlay_div1').fadeIn('slow');
+		// 	});
+		// });
+		// $(document).ready(function(){
+		// 	$('.close-button').click(function(){
+		// 		$('#overlay').fadeOut('fast');
+		// 		$('#overlay_div').fadeOut('fast');
+		// 	});
+		// });
+		// $(document).ready(function(){
+		// 	$('.close-button').click(function(){
+		// 		$('#overlay1').fadeOut('fast');
+		// 		$('#overlay_div1').fadeOut('fast');
+		// 	});
+		// });
+		// </script>
 	</head>
 	<body>
 		<!-- Header -->
@@ -48,7 +42,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="AboutUs.html">About Us</a></li>
 						<li><a href="elements.html">Contact</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<!-- <li><a href="#" class="button special">Sign Up</a></li> -->
                 </nav>
 		<!-- Banner -->
 			
@@ -57,10 +51,13 @@
 				<p>Efficient, Quick and Reliable way to manage nurses' activities</p>
 				<ul class="actions">
 					<li>
-						<button class="button big" id="logadmin">Sign In As Administrator</button>
+						<a href="adminFunction.html" class="button big">Task</a>
 					</li>
 					<li>
-						<button class="button big" id="lognurse">Sign In As Nurse</button>
+						<a href="nurses.html" class="button big" id="nurse">Nurse</a>
+					</li>
+					<li>
+						<a href="admin.html" class="button big" id="admin">Administrator</a>
 					</li>
 				</ul>
 			    </section>
@@ -78,7 +75,7 @@
                         <td>Password:</td><td><input type="password" name="pass" required></td>
                     </tr>
                     <tr class="login-button">
-                        <!-- <td colspan="2"></td> --><td><input type="submit" id="nursebutton"></td>
+                        <!-- <td colspan="2"></td> --><td><input type="submit"></td>
                     </tr>
                 </table>
 			</div>
@@ -93,7 +90,7 @@
                         <td>Password:</td><td><input type="password" name="pass" required></td>
                     </tr>
                     <tr class="login-button">
-                        <!-- <td colspan="2"></td> --><td><input type="submit" id="adminbutton"></td>
+                        <!-- <td colspan="2"></td> --><td><input type="submit"></td>
                     </tr>
                 </table>
 			</div>
