test commit for brackets

--- a/adminUI.html
+++ b/adminUI.html
@@ -51,7 +51,7 @@
 				<p>Efficient, Quick and Reliable way to manage nurses' activities</p>
 				<ul class="actions">
 					<li>
-						<a href="adminFunction.html" class="button big">Task</a>
+						<a href="adminFunction.php" class="button big">Task</a>
 					</li>
 					<li>
 						<a href="nurses.html" class="button big" id="nurse">Nurse</a>
