naming the index page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+    <header>This is the index page</header>
 	<head>
 		<title>Nurse Task Manager Homepage</title>
 		<link rel="stylesheet" href="css/style1.css"/>
