--- a/adminFunction.html
+++ b/adminFunction.html
@@ -2,7 +2,7 @@
 <!-- this -->
 <html>
 	<head>
-		<title>Nurse Task Manager Homepage</title>
+		<title>Nurse Task Manager Home</title>
 		<link rel="stylesheet" href="css/style1.css"/>
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/jquery-2.1.3.js"></script>
